use G1GC by default fix #71
we java 11+ now